kubernetes/apps/base/home-system/tautulli/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
  namespace: home-system
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLOUDFLARED_INGRESS_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'false'
spec:
  parentRefs:
    - name: cilium-gateway-main
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - 'cilium-tautulli.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: tautulli
          port: 80
          weight: 100
